--- a/settings/remote_settings.json
+++ b/settings/remote_settings.json
@@ -36,6 +36,12 @@
             "id": 645394647350247465
         },
         {
+            "name": "LPD Staff Sergeant",
+            "name_id": "staff_sergeant",
+            "id": 645394647350247465,
+            "is_white_shirt": true
+        },
+        {
             "name": "LPD Advisor",
             "name_id": "advisor",
             "id": 679474638266433567,
